Fix for GetRidePatView to fit new DB

--- a/Web.config
+++ b/Web.config
@@ -22,10 +22,15 @@
     </scripting>
   </system.web.extensions>
 
-  <connectionStrings>
+  <!--<connectionStrings>
 
     <add name="db"  connectionString="Data Source=Media.ruppin.ac.il;Initial Catalog=igroup91_test2;
            User ID=igroup91;Password=igroup91_27005" providerName="System.Data.SqlClient"/>
+  </connectionStrings>-->
+    <connectionStrings>
+
+    <add name="db"  connectionString="Data Source=Media.ruppin.ac.il;Initial Catalog=bgroup54_test1;
+           User ID=bgroup54;Password=bgroup54_99992" providerName="System.Data.SqlClient"/>
   </connectionStrings>
 
       
