Update to GetRidePatView WS

--- a/Web.config
+++ b/Web.config
@@ -27,10 +27,15 @@
     <add name="db"  connectionString="Data Source=Media.ruppin.ac.il;Initial Catalog=igroup91_test2;
            User ID=igroup91;Password=igroup91_27005" providerName="System.Data.SqlClient"/>
   </connectionStrings>-->
-    <connectionStrings>
+    <!--<connectionStrings>-->
 
-    <add name="db"  connectionString="Data Source=Media.ruppin.ac.il;Initial Catalog=bgroup54_test1;
+    <!--<add name="db"  connectionString="Data Source=Media.ruppin.ac.il;Initial Catalog=bgroup54_test1;
            User ID=bgroup54;Password=bgroup54_99992" providerName="System.Data.SqlClient"/>
+  </connectionStrings>-->
+      
+<connectionStrings>
+          <add name="db"  connectionString="Data Source=Media.ruppin.ac.il;Initial Catalog=bgroup64_test2;
+           User ID=bgroup64;Password=bgroup64_50141" providerName="System.Data.SqlClient"/>
   </connectionStrings>
 
       
