Added Message classes

--- a/Web.config
+++ b/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 
 <!--
   For more information on how to configure your ASP.NET application, please visit
@@ -8,15 +8,11 @@
 <configuration>
   
        <configSections>
-    <section name="log4net" 
-
-    type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net"/>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net" />
   </configSections>
 
   <log4net>
-    <appender name="TestAppender" 
-
-    type="log4net.Appender.RollingFileAppender" >
+    <appender name="TestAppender" type="log4net.Appender.RollingFileAppender">
       <file value="MyTestAppender.log" />
       <encoding value="utf-8" />
       <appendToFile value="true" />
@@ -44,7 +40,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
-    <globalization uiCulture="he-IL" culture="he-IL"/>
+    <globalization uiCulture="he-IL" culture="he-IL" />
    
   </system.web>
   <system.web.extensions>
@@ -68,9 +64,31 @@
   </connectionStrings>-->
       
 <connectionStrings>
-          <add name="db"  connectionString="Data Source=Media.ruppin.ac.il;Initial Catalog=bgroup64_test2;
-           User ID=bgroup64;Password=bgroup64_50141" providerName="System.Data.SqlClient"/>
+          <add name="db" connectionString="Data Source=Media.ruppin.ac.il;Initial Catalog=bgroup64_test2;            User ID=bgroup64;Password=bgroup64_50141" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
  
+  <runtime>
+
+ 
+      <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+
+ 
+          <dependentAssembly>
+
+ 
+              <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+
+ 
+              <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0" />
+
+ 
+          </dependentAssembly>
+
+ 
+      </assemblyBinding>
+
+ 
+  </runtime>
+
 </configuration>
