--- a/Web.config
+++ b/Web.config
@@ -7,8 +7,9 @@
 
 <configuration>
   
-       <configSections>
+  <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net" />
+    
   </configSections>
 
   <log4net>
@@ -67,6 +68,9 @@
           <add name="db" connectionString="Data Source=Media.ruppin.ac.il;Initial Catalog=bgroup64_test2; User ID=bgroup64;Password=bgroup64_50141" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
+  <appSettings>
+    <add key="serverKey" value="AIzaSyDQfirNkIkUKNy9B2irYhb8CV6pYpIVBOQ" />
+  </appSettings>
  
   <runtime>
 
@@ -92,3 +96,4 @@
   </runtime>
 
 </configuration>
+
