LogEntry + Email + one menu fits all

--- a/Web.config
+++ b/Web.config
@@ -44,6 +44,19 @@
     <globalization uiCulture="he-IL" culture="he-IL" />
    
   </system.web>
+
+  <system.net>
+  <mailSettings>
+    <smtp deliveryMethod="Network" from="cohenr2r@gmail.com">
+      <network defaultCredentials="false" host="smtp.gmail.com" port="587" userName="cohenr2r@gmail.com" password="systemr2r" enableSsl="true"/>
+      <!--<network defaultCredentials="false" host="smtp.gmail.com" port="25"  userName="cohenr2r@gmail.com" password="systemr2r" enableSsl="false"/>-->
+    </smtp>
+  </mailSettings>
+    </system.net>
+
+    
+
+  
   <system.web.extensions>
     <scripting>
       <webServices>
@@ -71,6 +84,8 @@
 
   <appSettings>
     <add key="serverKey" value="AIzaSyDQfirNkIkUKNy9B2irYhb8CV6pYpIVBOQ" />
+    <add key="systemMail"  value="cohenr2r@gmail.com"/>
+    <add key="adminMail"   value="mtndoron@gmail.com"/>
   </appSettings>
  
   <runtime>
