--- a/Web.config
+++ b/Web.config
@@ -39,10 +39,25 @@
   </startup> 
     
   <system.web>
+    <customErrors mode="Off"/>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <globalization uiCulture="he-IL" culture="he-IL" />
-   
+   <webServices>
+
+        <protocols>
+
+            <add name="HttpSoap12"/>
+
+            <add name="HttpSoap"/>
+
+            <add name="HttpGet"/>
+
+            <add name="HttpPost"/>
+
+        </protocols>
+
+</webServices>
   </system.web>
 
   <system.net>
@@ -52,6 +67,7 @@
       <!--<network defaultCredentials="false" host="smtp.gmail.com" port="25"  userName="cohenr2r@gmail.com" password="systemr2r" enableSsl="false"/>-->
     </smtp>
   </mailSettings>
+  
     </system.net>
 
     
@@ -60,6 +76,7 @@
   <system.web.extensions>
     <scripting>
       <webServices>
+        
         <!-- Try increasing this value to a larger value (Int.MaxValue used below) -->
         <jsonSerialization maxJsonLength="2147483644"></jsonSerialization>
       </webServices>
@@ -79,6 +96,7 @@
   </connectionStrings>-->
       
 <connectionStrings>
+          <!--<add name="db" connectionString="Data Source=Media.ruppin.ac.il;Initial Catalog=bgroup99_test2; User ID=benny;Password=ruppine=mc2" providerName="System.Data.SqlClient" />-->
           <add name="db" connectionString="Data Source=Media.ruppin.ac.il;Initial Catalog=bgroup64_test2; User ID=bgroup64;Password=bgroup64_50141" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
@@ -86,6 +104,8 @@
     <add key="serverKey" value="AIzaSyDQfirNkIkUKNy9B2irYhb8CV6pYpIVBOQ" />
     <add key="systemMail"  value="cohenr2r@gmail.com"/>
     <add key="adminMail"   value="mtndoron@gmail.com"/>
+    <add key="password"   value="123456"/>
+    <add key="AvailableServers" value="https://proj.ruppin.ac.il/igroup91/test2/tar3/road%20to%20recovery/pages/,https://proj.ruppin.ac.il/igroup91/r2rtest/road2r/road%20to%20recovery/pages/" />
   </appSettings>
  
   <runtime>
