added 'N' to queries

--- a/Web.config
+++ b/Web.config
@@ -97,15 +97,18 @@
       
 <connectionStrings>
           <!--<add name="db" connectionString="Data Source=Media.ruppin.ac.il;Initial Catalog=bgroup99_test2; User ID=benny;Password=ruppine=mc2" providerName="System.Data.SqlClient" />-->
-          <add name="db" connectionString="Data Source=Media.ruppin.ac.il;Initial Catalog=bgroup64_test2; User ID=bgroup64;Password=bgroup64_50141" providerName="System.Data.SqlClient" />
+          <!--<add name="db" connectionString="Data Source=Media.ruppin.ac.il;Initial Catalog=bgroup64_test2; User ID=bgroup64;Password=bgroup64_50141" providerName="System.Data.SqlClient" />-->
+<!--Server=tcp:road2r.database.windows.net,1433;Initial Catalog=r2rdb;Persist Security Info=False;User ID={your_username};Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30-->          
+<add name="db" connectionString="Server=tcp:road2r.database.windows.net,1433;Initial Catalog=r2rdb_test;Persist Security Info=False;User ID=benny;Password=cohenr2r!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" />
   </connectionStrings>
 
   <appSettings>
     <add key="serverKey" value="AIzaSyDQfirNkIkUKNy9B2irYhb8CV6pYpIVBOQ" />
     <add key="systemMail"  value="cohenr2r@gmail.com"/>
     <add key="adminMail"   value="mtndoron@gmail.com"/>
-    <add key="password"   value="123456"/>
-    <add key="AvailableServers" value="https://proj.ruppin.ac.il/igroup91/test2/tar3/road%20to%20recovery/pages/,https://proj.ruppin.ac.il/igroup91/r2rtest/road2r/road%20to%20recovery/pages/" />
+    <add key="password"   value="r2rr2r"/>
+    <!--<add key="AvailableServers" value="https://proj.ruppin.ac.il/igroup91/test2/tar3/road%20to%20recovery/pages/,https://proj.ruppin.ac.il/igroup91/r2rtest/road2r/road%20to%20recovery/pages/" />-->
+    <add key="AvailableServers" value="http://40.117.122.242/Road%20to%20Recovery/pages/" />
   </appSettings>
  
   <runtime>
