--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="JWT" version="1.3.4" targetFramework="net40" />
   <package id="log4net" version="2.0.8" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
   <package id="PushSharp" version="4.0.10" targetFramework="net452" />
