some fixes in NewVolunteer.html (yuval.html)

--- a/packages.config
+++ b/packages.config
@@ -4,4 +4,5 @@
   <package id="log4net" version="2.0.8" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
   <package id="PushSharp" version="4.0.10" targetFramework="net452" />
+  <package id="WhatsAppAPI" version="15.4.29" targetFramework="net40" />
 </packages>
