Added the ability to edit name of volunteer

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ packages/
 log/MyTestAppender.log
 
 App_Data/PublishProfiles/r2rapp - Web Deploy.pubxml
+App_Data/PublishProfiles/r2rapp - Web Deploy.pubxml
