--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ log/MyTestAppender.log
 
 App_Data/PublishProfiles/r2rapp - Web Deploy.pubxml
 App_Data/PublishProfiles/r2rapp - Web Deploy.pubxml
+App_Data/PublishProfiles/r2rapp - Web Deploy.pubxml
