--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ log/MyTestAppender.log
 App_Data/PublishProfiles/r2rapp - Web Deploy.pubxml
 App_Data/PublishProfiles/r2rapp - Web Deploy.pubxml
 App_Data/PublishProfiles/r2rapp - Web Deploy.pubxml
+log/MyTestAppender.log
