ignore local changes

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ App_Data/PublishProfiles/r2rapp - Web Deploy.pubxml
 App_Data/PublishProfiles/r2rapp - Web Deploy.pubxml
 App_Data/PublishProfiles/r2rapp - Web Deploy.pubxml
 log/MyTestAppender.log
+/.vs/Road2R/config/applicationhost.config
