--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ log/MyTestAppender.log
 /.vs/Road2R/config/applicationhost.config
 App_Data/PublishProfiles/r2rapp - Web Deploy.pubxml
 App_Data/PublishProfiles/r2rapp - Web Deploy.pubxml
+App_Data/PublishProfiles/r2rapp - Web Deploy.pubxml
