--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ log/MyTestAppender.log
 App_Data/PublishProfiles/r2rapp - Web Deploy.pubxml
 App_Data/PublishProfiles/r2rapp - Web Deploy.pubxml
 App_Data/PublishProfiles/r2rapp - Web Deploy.pubxml
+log/StackTraces.txt
