--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ App_Data/PublishProfiles/r2rapp - Web Deploy.pubxml
 App_Data/PublishProfiles/r2rapp - Web Deploy.pubxml
 App_Data/PublishProfiles/r2rapp - Web Deploy.pubxml
 log/StackTraces.txt
+App_Data/PublishProfiles/r2rapp - Web Deploy.pubxml
+website.publishproj
