--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ App_Data/PublishProfiles/r2rapp - Web Deploy.pubxml
 App_Data/PublishProfiles/r2rapp - Web Deploy.pubxml
 *.pubxml
 *.publishproj
+App_Data/PublishProfiles/r2rapp - Web Deploy.pubxml
