--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ App_Data/PublishProfiles/r2rapp - Web Deploy.pubxml
 *.pubxml
 *.publishproj
 App_Data/PublishProfiles/r2rapp - Web Deploy.pubxml
+App_Data/PublishProfiles/r2rapp - Web Deploy.pubxml
