--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,6 @@ App_Data/PublishProfiles/r2rapp - Web Deploy.pubxml
 *.publishproj
 App_Data/PublishProfiles/r2rapp - Web Deploy.pubxml
 App_Data/PublishProfiles/r2rapp - Web Deploy.pubxml
+*.pubxml
+*.pubxml
+App_Data/PublishProfiles/r2rapp - Web Deploy.pubxml
