--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ App_Data/PublishProfiles/r2rapp - Web Deploy.pubxml
 *.pubxml
 *.pubxml
 App_Data/PublishProfiles/r2rapp - Web Deploy.pubxml
+App_Data/PublishProfiles/r2rapp - Web Deploy.pubxml
