--- a/packages.config
+++ b/packages.config
@@ -7,6 +7,7 @@
   <package id="Microsoft.AspNet.SignalR.Core" version="2.4.2" targetFramework="net452" />
   <package id="Microsoft.AspNet.SignalR.JS" version="2.4.2" targetFramework="net452" />
   <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.4.2" targetFramework="net452" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="10.0.0" targetFramework="net48" />
   <package id="Microsoft.Owin" version="4.2.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Security" version="4.2.0" targetFramework="net452" />
@@ -14,5 +15,21 @@
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="PushSharp" version="4.0.10" targetFramework="net452" />
+  <package id="System.Buffers" version="4.6.1" targetFramework="net48" />
+  <package id="System.IO" version="4.3.0" targetFramework="net48" />
+  <package id="System.IO.Pipelines" version="10.0.0" targetFramework="net48" />
+  <package id="System.Memory" version="4.6.3" targetFramework="net48" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.6.1" targetFramework="net48" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.2" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="10.0.0" targetFramework="net48" />
+  <package id="System.Text.Json" version="10.0.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.6.3" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.6.1" targetFramework="net48" />
   <package id="WhatsAppAPI" version="15.4.29" targetFramework="net40" />
 </packages>
