--- a/packages.config
+++ b/packages.config
@@ -14,5 +14,7 @@
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="PushSharp" version="4.0.10" targetFramework="net452" />
+  <package id="System.Configuration.ConfigurationManager" version="10.0.2" targetFramework="net48" />
+  <package id="System.Runtime.Caching" version="10.0.2" targetFramework="net48" />
   <package id="WhatsAppAPI" version="15.4.29" targetFramework="net40" />
 </packages>
